--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,11 +14,11 @@ android {
     }
     defaultConfig {
         applicationId "com.GLAS.LakeDistrictNavigation"
-        minSdk 21
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
-        minSdkVersion 21
+        minSdkVersion 23
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -47,6 +47,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
     implementation("androidx.core:core-ktx:1.6.0")
+    implementation 'com.github.tbruyelle:rxpermissions:0.12'
 
 
     implementation 'androidx.core:core-ktx:1.8.0'
