--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,8 +16,8 @@ android {
         applicationId "com.GLAS.LakeDistrictNavigation"
         minSdk 23
         targetSdk 32
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName '1.3'
         minSdkVersion 23
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
