--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="Lake District Navigation">
+            android:label="Lake District Route Planner">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
